--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://DTTSY.github.io/ # 绑定的域名
+baseURL: https://dttsy.github.io/hugoBlog/ # 绑定的域名
 languageCode: zh-cn # en-us
 title: Sulv's Blog
 theme: hugo-PaperMod  # 主题名字，和themes文件夹下的一致
